examples/test/testpolicy15309.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15309
  namespace: namespace214
spec:
  podSelector:
    matchLabels:
      key3: value6
      key35: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value15
          key43: value36
          key7: value41
      podSelector:
        matchLabels:
          key19: value27
          key22: value14
